--- a/src/assets/styles/_partials/_variables.scss
+++ b/src/assets/styles/_partials/_variables.scss
@@ -1,6 +1,5 @@
 // REGOLE DI VARIABLES - SCSS ( da utilizzare a seconda dei casi)
-// $primary_color: red;
-// $secondary_color: #222;
+$primary_color: #d48f38;
 
 // REGOLE DI VARIABLES - CSS (da utilizzare a seconda dei casi)
 // :root {
