sistemazione cards main

--- a/src/assets/styles/_partials/_variables.scss
+++ b/src/assets/styles/_partials/_variables.scss
@@ -1,5 +1,6 @@
 // REGOLE DI VARIABLES - SCSS ( da utilizzare a seconda dei casi)
 $primary_color: #d48f38;
+$secondary_color: white;
 
 // REGOLE DI VARIABLES - CSS (da utilizzare a seconda dei casi)
 // :root {
