immagini cards sistemazione

--- a/src/assets/styles/_partials/_reset.scss
+++ b/src/assets/styles/_partials/_reset.scss
@@ -4,8 +4,10 @@ REGOLE DI RESET
 **************
 */
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+// * {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+// }
+
+// non usare con Bootstrap
